[package]
name = "neols"
version = "0.6.0"
authors = ["Tomas <tomas.hagenau@protonmail.ch>"]
edition = "2018"
description = "A remake of `ls` for the 21st century"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://codeberg.org/HackTheOxidation/neols"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "neols"
test = false
bench = false

[profile.dev]
opt-level = 1

[dependencies]
colored = "2.0.0"
